--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -230,6 +230,10 @@ footer .about {
     text-align: center;
 }
 
+.slide {
+    width: 100%;
+}
+
 footer .about .slide.one .image {
     display: flex;
     align-items: center;
